changed positioning of ol-item & ol-item:before to prevent text from wrapping under bullets

--- a/5_site/style/style.css
+++ b/5_site/style/style.css
@@ -67,7 +67,7 @@ light gray bg: #fbfbfb
   -moz-osx-font-smoothing: grayscale;
   text-decoration: none;
   background: transparent;
-  box-sizing: border-box;  
+  box-sizing: border-box;
   font-family: 'Varela Round', sans-serif;
 }
 
@@ -826,7 +826,7 @@ tr:nth-child(odd) {
   display: list-item;
   color: #34567a;
   list-style-position: inside;
-  padding-left: 8px;
+  padding-left: 60px;
   margin-bottom: 16px;
   position: relative; /* to anchor bg circle for ol items */
   font-weight: bold;
@@ -838,6 +838,8 @@ tr:nth-child(odd) {
   font-weight: bold;
   float: left;
   margin: 7px 33px 0 2px;
+  position: absolute; /* to prevent list # from being affected by li padding */
+  left: 8px; /* to center # in bg circle */
 }
 
 .ol-item:nth-child(n+10):before { /* centers double digit ol numbers */
